--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^13.0.2
+  location: ^7.0.1
   flutter_bloc: ^8.1.6
-  intl: ^0.20.1
+  intl: ^0.19.0
   equatable: ^2.0.7
   weather: ^3.1.1
+  flutter_localization: ^0.2.3
 
   cupertino_icons: ^1.0.6
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
